--- a/blogs/templates/blogs/home_page.html
+++ b/blogs/templates/blogs/home_page.html
@@ -11,8 +11,17 @@
         {% for post in post_list %}
         <article class="blog-post">
           <h2 class="blog-post-title mb-1">
+            {% comment %}
             <a
-              href="{% url 'post' post.id %}"
+              href="{% url 'blogs:post' post.slug %}"
+              style="text-decoration: none"
+              class="text-black"
+            >
+              {{ post.title }}
+            </a>
+            {% endcomment %}
+            <a
+              href="{{ post.get_absolute_url  }}"
               style="text-decoration: none"
               class="text-black"
             >
