ordering posts by publication date

--- a/blogs/templates/blogs/home_page.html
+++ b/blogs/templates/blogs/home_page.html
@@ -20,7 +20,7 @@
             </a>
           </h2>
           <p class="blog-post-meta">
-            {{ post.date_created.date }}. {{post.author}}
+            {{ post.pub_date.date }}. {{post.author}}
           </p>
 
           <hr />
