--- a/blogs/templates/blogs/post_detail.html
+++ b/blogs/templates/blogs/post_detail.html
@@ -8,7 +8,7 @@
           <div class="d-flex justify-content-between">
             <h1>{{ post.title }}</h1>
             <div class="align-self-end">
-              Publicado: {{ post.date_created.date }}
+              Publicado: {{ post.pub_date.date }}
             </div>
           </div>
         </div>
