improvements to navbar and search input

--- a/blogs/templates/blogs/featured.html
+++ b/blogs/templates/blogs/featured.html
@@ -32,7 +32,9 @@
           <h1 class="display-4 fw-bold px-5">{{ f.title }}</h1>
           <p class="lead my-3 px-5">{{ f.overview }}</p>
           <p class="lead mb-0 px-5">
-            <a href="#" class="text-white fw-bold">Continuar leyendo...</a>
+            <a href="{{ f.get_absolute_url }}" class="text-white fw-bold"
+              >Continuar leyendo...</a
+            >
           </p>
         </div>
       </div>
