--- a/blogs/templates/navbar.html
+++ b/blogs/templates/navbar.html
@@ -20,7 +20,7 @@
           <a class="nav-link active" aria-current="page" href="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Destacados</a>
+          <a class="nav-link" href="{% url 'blogs:featured' %}">Destacados</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -34,12 +34,23 @@
           </a>
           <ul class="dropdown-menu">
             {% for category in categories %}
-            <li><a class="dropdown-item" href="#">{{ category.title }}</a></li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="{% url 'blogs:category' category.slug %}"
+                >{{ category.title }}</a
+              >
+            </li>
             {% endfor %}
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search" action="" method="get">
+      <form
+        class="d-flex"
+        role="search"
+        action="{% url 'blogs:search' %}"
+        method="get"
+      >
         <input
           name="search"
           class="form-control me-2"
