--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,10 @@
           <p class="mt-3">
             <a href="{% url 'password_reset' %}">¿Olvido su cuenta?</a>
           </p>
-          <p class="mt-3">¿Aún no tiene una cuenta? <a href="">Crea una</a></p>
+          <p class="mt-3">
+            ¿Aún no tiene una cuenta?
+            <a href="{% url 'users:registration' %}">Crea una</a>
+          </p>
         </div>
       </div>
 
