--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,7 @@
             </button>
           </form>
           <p class="mt-3">
-            <a href="{% url 'password_reset' %}">¿Olvido su cuenta?</a>
+            <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
           </p>
           <p class="mt-3">
             ¿Aún no tiene una cuenta?
