--- a/blogs/templates/base.html
+++ b/blogs/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>devsiderio blog</title>
-    <link rel="icon" type="image/x-icon" href="/media/blog.ico" />
+    <link rel="icon" type="image/x-icon" href="" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
