--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-3"></div>
@@ -11,7 +11,7 @@
           {% csrf_token %} {{ form|crispy }}
           <input
             type="submit"
-            class="btn btn-outline-primary"
+            class="btn btn-primary mt-3"
             value="Change my password"
           />
         </form>
