--- a/blogs/templates/base.html
+++ b/blogs/templates/base.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>devsiderio blog</title>
-    <link rel="icon" type="image/x-icon" href="" />
+    {% load static %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/8b253bae10.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <title>devsiderio blog</title>
   </head>
-  <body>
+  <body class="bg-dark text-light">
     {% include "navbar.html" %} {% block content %} {% endblock content %}
 
     <script
@@ -20,5 +25,14 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <a
+      href="#"
+      class="btn btn-primary scroll-to-top"
+      id="scrollToTopBtn"
+      style="display: none"
+    >
+      <i class="fa-solid fa-arrow-up"></i>
+    </a>
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
