--- a/blogs/templates/blogs/home_page.html
+++ b/blogs/templates/blogs/home_page.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-12">{% include "blogs/featured.html" %}</div>
@@ -7,40 +7,56 @@
 
     <div class="row g-5">
       <div class="col-md-8">
-        <h3 class="pb-4 mb-4 fst-italic border-bottom">Más artículos</h3>
+        <h3 class="pb-4 mb-4 fst-italic border-bottom text-light">
+          Más artículos
+        </h3>
         {% for post in post_list %}
         <article class="blog-post">
-          <h2 class="blog-post-title mb-1">
+          <h2 class="blog-post-title mb-1 text-white">
             <a
-              href="{{ post.get_absolute_url  }}"
+              href="{{ post.get_absolute_url }}"
+              class="text-white"
               style="text-decoration: none"
-              class="text-black"
             >
               {{ post.title }}
             </a>
           </h2>
-          <p class="blog-post-meta">
-            {{ post.pub_date.date }}. {{post.author}}
+          <p class="blog-post-meta text-muted">
+            {{ post.pub_date.date }}. {{ post.author }}
           </p>
-
-          <hr />
-          <p>{{ post.overview }}</p>
+          <hr class="bg-light" />
+          <p class="text-light">{{ post.overview }}</p>
         </article>
         {% endfor %}
       </div>
 
       <div class="col-md-4">
         <div class="position-sticky" style="top: 2rem">
-          <div class="p-4 mb-3 bg-light rounded">
-            <h4 class="fst-italic">Sobre</h4>
-            <p class="mb-0">
-              Información adicional sobre lo que se encuentra dentro de esta
-              página.
+          <div class="p-4 mb-3 bg-secondary rounded">
+            <h4 class="fst-italic text-white">Qué es este sitio?</h4>
+            <p class="mb-0 text-light">
+              Un blog de prueba, para introducirse al uso de Django 🤖
             </p>
           </div>
 
           <div class="p-4">
-            <h4 class="fst-italic">Más cosas</h4>
+            <h4 class="fst-italic text-white">Links útiles</h4>
+            <a
+              href="https://github.com/devsiderio/devsiderio-blog"
+              target="_blank"
+              class="text-light"
+            >
+              Repositorio de este blog
+            </a>
+            <hr class="bg-light" />
+            <a
+              href="https://github.com/devsiderio/devsiderio-blog/blob/main/LICENSE"
+              target="_blank"
+              class="text-light"
+            >
+              Licencia de esta app
+            </a>
+            <hr class="bg-light" />
           </div>
         </div>
       </div>
