--- a/blogs/templates/blogs/post_detail.html
+++ b/blogs/templates/blogs/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load markdown_extras %} {% load crispy_forms_tags
 %} {% block content %}
 
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-12">
@@ -27,12 +27,14 @@
 
         <form method="post">
           {% csrf_token %} {{ form }}
-          <button class="btn btn-primary" type="submit">Enter</button>
+          <button class="btn btn-primary" type="submit">Comentar</button>
         </form>
         <hr class="d-none d-md-block my-2 mb-3 mt-2" />
 
         {% for comment in post.comment_set.all %}
-        <div class="mt-4 mb-2 border border-opacity-10 rounded p-1">
+        <div
+          class="mt-4 mb-2 border border-opacity-10 rounded p-1 bg-dark text-light"
+        >
           <div class="row">
             <div class="col-8 d-flex">
               <h5>{{ comment.author.username }}</h5>
