--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,30 +1,30 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
   <main class="container">
-    <div class="row g-5">
-      <div class="col-md-3"></div>
-
+    <div class="row g-5 justify-content-center">
       <div class="col-md-6">
-        <div class="w-100 m-auto text-center">
+        <div class="text-center">
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
-            <h1 class="h3 mb-3 fw-normal">Ingrese sus datos</h1>
+            <h1 class="h3 mb-3 fw-normal text-light">Ingrese sus datos</h1>
             {{ form|crispy }}
             <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">
               Sign in
             </button>
           </form>
-          <p class="mt-3">
-            <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
+          <p class="mt-3 text-light">
+            <a href="{% url 'password_reset' %}" class="text-light"
+              >¿Olvidaste tu contraseña?</a
+            >
           </p>
-          <p class="mt-3">
+          <p class="mt-3 text-light">
             ¿Aún no tiene una cuenta?
-            <a href="{% url 'users:registration' %}">Crea una</a>
+            <a href="{% url 'users:registration' %}" class="text-light"
+              >Crea una</a
+            >
           </p>
         </div>
       </div>
-
-      <div class="col-md-3"></div>
     </div>
   </main>
 </div>
