--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-3"></div>
 
       <div class="col-md-6">
         <div class="mt-5 mb-5" style="height: 25vh">
-          <h1>
+          <h1 class="text-center">
             La contraseña ha sido cambiada con éxito. Puedes iniciar sesión con
             tu nueva contraseña.
           </h1>
-          <p><a href="{% url 'login' %}">Iniciar sesión</a></p>
+          <p class="text-center">
+            <a href="{% url 'login' %}" class="btn btn-primary mt-3"
+              >Iniciar sesión</a
+            >
+          </p>
         </div>
       </div>
 
