--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-3"></div>
 
       <div class="col-md-6">
         <div class="mt-5 mb-5" style="height: 25vh">
-          <strong class="d-none d-md-block h6 my-2">Email Sent</strong>
+          <strong class="d-none d-md-block h6 my-2">Email enviado!</strong>
           <p class="mb-5">
-            Te enviamos instrucciones por correo electrónico para restablecer tu
-            contraseña. Si no te llegan en unos minutos, revisá tu carpeta de
-            correo no deseado.
+            Te enviamos un correo electrónico con instrucciones para restablecer
+            tu contraseña. Si no te llega en breve, por favor revisá tu carpeta
+            de correo no deseado.
           </p>
-          <p>
-            <a href="{% url 'login' %}"
+          <p class="text-center">
+            <a href="{% url 'login' %}" class="text-light"
               >Volver a la página de inicio de sesión</a
             >
           </p>
