--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
     <div class="row g-5">
       <div class="col-md-3"></div>
@@ -13,18 +13,22 @@
             <div class="alert alert-danger">{{ form.email.errors }}</div>
             {% endif %}
 
-            <h1>¿Olvidaste tu contraseña?</h1>
+            <h1 class="text-center">¿Olvidaste tu contraseña?</h1>
             <hr class="d-none d-md-block my-2 mb-3 mt-2" />
-            Ingrese su dirección de correo electrónico a continuación y le
-            enviaremos instrucciones para configurar una nueva.
+            <p class="text-center">
+              Ingrese su dirección de correo electrónico a continuación y le
+              enviaremos instrucciones para configurar una nueva.
+            </p>
 
             <p>{{ form|crispy }}</p>
 
-            <input
-              type="submit"
-              class="btn btn-outline-primary btn-lg"
-              value="Resetear contraseña"
-            />
+            <div class="mb-3 text-center">
+              <input
+                type="submit"
+                class="btn btn-primary btn-lg mt-3"
+                value="Resetear contraseña"
+              />
+            </div>
           </form>
         </div>
       </div>
