--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,19 +1,17 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
-<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
+<div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout bg-dark text-light">
   <main class="container">
-    <div class="row g-5">
-      <div class="col-md-3"></div>
-
+    <div class="row g-5 justify-content-center">
       <div class="col-md-6">
-        <div class="w-100 m-auto text-center">
+        <div class="text-center">
           <form method="POST" class="form-group">
             {% csrf_token %} {{ form|crispy }}
-            <button type="submit" class="btn btn-success">Register</button>
+            <button type="submit" class="btn btn-success mt-3">
+              Registrarse
+            </button>
           </form>
         </div>
       </div>
-
-      <div class="col-md-3"></div>
     </div>
   </main>
 </div>
